[gd_scene load_steps=2 format=3 uid="uid://rd0b5nysx6vq"]

[ext_resource type="Script" path="res://UI/GameEndDialog.gd" id="3"]

[node name="GameEndDialog" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("3")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.145098, 0.203922, 0.337255, 0.72549)

[node name="marginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="centerContainer" type="CenterContainer" parent="marginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="vBoxContainer" type="VBoxContainer" parent="marginContainer/centerContainer"]
layout_mode = 2

[node name="labGameOverTitel" type="Label" parent="marginContainer/centerContainer/vBoxContainer"]
layout_mode = 2
text = "Game Over"

[node name="labWinLoose" type="Label" parent="marginContainer/centerContainer/vBoxContainer/labGameOverTitel"]
layout_mode = 0
mouse_filter = 0
text = "You Win"

[node name="buttNewGame" type="Button" parent="marginContainer/centerContainer/vBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "New Game"

[node name="buttMainMenu" type="Button" parent="marginContainer/centerContainer/vBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Back to Mainmenu"

[connection signal="pressed" from="marginContainer/centerContainer/vBoxContainer/buttNewGame" to="." method="_on_buttNewGame_pressed"]
[connection signal="pressed" from="marginContainer/centerContainer/vBoxContainer/buttMainMenu" to="." method="_on_buttMainMenu_pressed"]
